[gd_scene load_steps=14 format=3 uid="uid://cvgivxopk62ic"]

[ext_resource type="PackedScene" uid="uid://baqtq748e2314" path="res://scenes/brickBreaker/paddle.tscn" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://bla25v87vpm1e" path="res://scripts/level.gd" id="1_w8frs"]
[ext_resource type="PackedScene" uid="uid://dn3083ytfbwut" path="res://scenes/brickBreaker/touch_controls.tscn" id="2_2r41h"]
[ext_resource type="Texture2D" uid="uid://by885h87iwnui" path="res://assets/background dirt.png" id="2_ppgk2"]
[ext_resource type="PackedScene" uid="uid://c00uaxwxq1i2b" path="res://scenes/brickBreaker/ball.tscn" id="2_w7c3h"]
[ext_resource type="Script" uid="uid://bfk12tdquv0b7" path="res://scripts/player_ui.gd" id="4_mx8sn"]
[ext_resource type="PackedScene" uid="uid://d32bg47cji12w" path="res://scenes/ui_popup.tscn" id="7_klq6b"]
[ext_resource type="Script" uid="uid://lpx3hxn6obsv" path="res://scripts/inventory_popup.gd" id="8_b121j"]
[ext_resource type="PackedScene" uid="uid://cdkondhkrlc2b" path="res://scenes/shaders/crt_shader.tscn" id="9_k34ab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7c3h"]
size = Vector2(7.5, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8frs"]
size = Vector2(720, 7)

[sub_resource type="LabelSettings" id="LabelSettings_w8frs"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0.043137256, 0.043137256, 0.043137256, 0.8117647)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppgk2"]
size = Vector2(720, 11)

[node name="Level" type="Node2D"]
script = ExtResource("1_w8frs")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(360, 640)
texture = ExtResource("2_ppgk2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="Paddle" parent="." instance=ExtResource("1_2q6dc")]
position = Vector2(359, 1130)

[node name="Ball" parent="." instance=ExtResource("2_w7c3h")]
position = Vector2(384, 1059)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(-3.75, 640)
shape = SubResource("RectangleShape2D_w7c3h")

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(724, 640)
shape = SubResource("RectangleShape2D_w7c3h")

[node name="Ceiling" type="CollisionShape2D" parent="Walls"]
position = Vector2(360, -3.5)
shape = SubResource("RectangleShape2D_w8frs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("4_mx8sn")

[node name="ScoreText" type="Label" parent="CanvasLayer"]
offset_left = 15.0
offset_top = 15.0
offset_right = 172.0
offset_bottom = 60.0
text = "Score: 100"
label_settings = SubResource("LabelSettings_w8frs")

[node name="LivesText" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_top = 15.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Lives: 4"
label_settings = SubResource("LabelSettings_w8frs")

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("7_klq6b")]
process_mode = 2
visible = false
script = ExtResource("8_b121j")

[node name="CatchBucket" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchBucket"]
position = Vector2(360, 1282)
shape = SubResource("RectangleShape2D_ppgk2")

[node name="TouchControls" parent="." instance=ExtResource("2_2r41h")]

[node name="CRTShader" parent="." instance=ExtResource("9_k34ab")]

[connection signal="body_entered" from="CatchBucket" to="Ball" method="_on_catch_bucket_body_entered"]
[connection signal="body_entered" from="CatchBucket" to="CanvasLayer" method="_on_catch_bucket_body_entered"]
